package.json adjusted again

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "http": "@0.0.1-security"
+    "http": "0.0.1-security"
   },
     "scripts": {
       "start": "node server.js"
